# docs/swagger.json
@@ -9,7 +9,7 @@
     "paths": {
         "/tg-messages": {
             "get": {
-                "description": "Show all messages list",
+                "description": "Show messages list",
                 "consumes": [
                     "application/json"
                 ],
@@ -148,7 +148,7 @@
         "model.TGMessage": {
             "type": "object",
             "properties": {
-                "answer": {
+                "bot_answer": {
                     "type": "string"
                 },
                 "chat_id": {
@@ -160,7 +160,7 @@
                 "id": {
                     "type": "string"
                 },
-                "text": {
+                "user_question": {
                     "type": "string"
                 }
             }
@@ -176,6 +176,9 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "question_count": {
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
