# internal/handler/telegram/v1/message.go
@@ -2,11 +2,8 @@ package v1
 
 import (
 	"context"
-	"fmt"
 	"strconv"
-	"time"
 
-	"github.com/eerzho/ten_tarot/internal/model"
 	"github.com/eerzho/ten_tarot/pkg/logger"
 	"gopkg.in/telebot.v3"
 )
@@ -16,11 +13,6 @@ type (
 		tgMessageService tgMessageService
 		tgUserService    tgUserService
 	}
-
-	tgMessageService interface {
-		CountByTime(ctx context.Context, chatID string, st time.Time) (int, error)
-		Create(ctx context.Context, chatID, text string) (*model.TGMessage, error)
-	}
 )
 
 func newMessage(mv *middleware, bot *telebot.Bot, tgMessageService tgMessageService, tgUserService tgUserService) *message {
@@ -29,44 +21,61 @@ func newMessage(mv *middleware, bot *telebot.Bot, tgMessageService tgMessageServ
 		tgUserService:    tgUserService,
 	}
 
-	bot.Handle(telebot.OnText, m.text, mv.rateLimit, mv.dailyLimit)
+	bot.Handle(telebot.OnText, m.text, mv.spamLimit, mv.requestLimit)
 
 	return m
 }
 
 func (m *message) text(ctx telebot.Context) error {
-	const op = "./internal/handler/telegram/v1/message::text"
+	const op = "handler.telegram.v1.message.text"
 
 	ctxB := context.Background()
 	chatID := strconv.Itoa(int(ctx.Sender().ID))
 
-	if _, err := m.tgUserService.Create(ctxB, chatID, ctx.Sender().Username); err != nil {
-		logger.Warn(fmt.Sprintf("%s - %s", op, err.Error()))
+	if _, err := m.tgUserService.GetOrCreateByChatIDUsername(
+		ctxB,
+		chatID, ctx.Sender().Username,
+	); err != nil {
+		logger.OPError(op, err)
 	}
 
-	opt := &telebot.SendOptions{ReplyTo: ctx.Message(), ParseMode: telebot.ModeMarkdown}
-
-	waitMsg, err := ctx.Bot().Send(ctx.Sender(), "✨Пожалуйста, подождите✨", opt)
-	if err != nil {
-		logger.Warn(fmt.Sprintf("%s - %s", op, err.Error()))
+	opt := &telebot.SendOptions{
+		ReplyTo:   ctx.Message(),
+		ParseMode: telebot.ModeMarkdown,
 	}
 
-	tgMsg, err := m.tgMessageService.Create(ctxB, chatID, ctx.Message().Text)
+	waitMsg, err := ctx.Bot().Send(
+		ctx.Sender(),
+		"✨Пожалуйста, подождите✨",
+		opt,
+	)
 	if err != nil {
-		logger.Error(fmt.Sprintf("%s - %s", op, err.Error()))
+		logger.OPWarn(op, err)
+	}
+
+	tgMsg, err := m.tgMessageService.CreateByChatIDUQ(
+		ctxB,
+		chatID,
+		ctx.Message().Text,
+	)
+	if err != nil {
+		logger.OPError(op, err)
 		if err = ctx.Send("✨Пожалуйста, повторите попытку позже✨", opt); err != nil {
-			logger.Error(fmt.Sprintf("%s - %s", op, err.Error()))
+			logger.OPError(op, err)
 			return err
 		}
 		return err
 	}
 
 	if err = ctx.Bot().Delete(waitMsg); err != nil {
-		logger.Warn(fmt.Sprintf("%s - %s", op, err.Error()))
+		logger.OPWarn(op, err)
 	}
 
-	if _, err = ctx.Bot().Send(ctx.Sender(), tgMsg.Answer, opt); err != nil {
-		logger.Error(fmt.Sprintf("%s - %s", op, err.Error()))
+	if err = ctx.Send(
+		tgMsg.BotAnswer,
+		opt,
+	); err != nil {
+		logger.OPError(op, err)
 		return err
 	}
 
