# internal/model/tg_invoice.go
@@ -4,8 +4,9 @@ type (
 	TGInvoice struct {
 		ID            string `bson:"_id" json:"id"`
 		ChatID        string `bson:"chat_id" json:"chat_id"`
-		Stars         int    `bson:"stars" json:"stars"`
-		QuestionCount int    `bson:"question_count" json:"question_count"`
 		ChargeID      string `bson:"charge_id" json:"charge_id,omitempty"`
+		StarsCount    int    `bson:"stars_count" json:"stars_count"`
+		QuestionCount int    `bson:"question_count" json:"question_count"`
+		CreatedAt     string `bson:"created_at" json:"created_at"`
 	}
 )
