# internal/model/tg_message.go
@@ -1,9 +1,9 @@
 package model
 
 type TGMessage struct {
-	ID        string `bson:"_id,omitempty" json:"id"`
-	ChatID    string `bson:"chat_id" json:"chat_id"`
-	Text      string `bson:"text" json:"text"`
-	Answer    string `bson:"answer,omitempty" json:"answer"`
-	CreatedAt string `bson:"created_at" json:"created_at"`
+	ID           string `bson:"_id" json:"id"`
+	ChatID       string `bson:"chat_id" json:"chat_id"`
+	BotAnswer    string `bson:"bot_answer" json:"bot_answer"`
+	UserQuestion string `bson:"user_question" json:"user_question"`
+	CreatedAt    string `bson:"created_at" json:"created_at"`
 }
